--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,16 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "proto": "./node_modules/.bin/proto-loader-gen-types --longs=String --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=proto/ proto/*.proto"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.9.12",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "leaflet": "^1.9.4",
     "next": "14.0.1",
+    "protobufjs": "^7.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
